--- a/.github/workflows/build-openwrt-system-image.yml
+++ b/.github/workflows/build-openwrt-system-image.yml
@@ -12,11 +12,11 @@ on:
       source_branch:
         description: "Select the source branch"
         required: false
-        default: "openwrt_24.10.4"
+        default: "immortalwrt_24.10"
         type: choice
         options:
           - openwrt_main
-          - immortalwrt_24.10.4
+          - immortalwrt_24.10
           - lede_master
       openwrt_board:
         description: "Select device board"
