--- a/.github/workflows/build-openwrt-system-image.yml
+++ b/.github/workflows/build-openwrt-system-image.yml
@@ -12,11 +12,11 @@ on:
       source_branch:
         description: "Select the source branch"
         required: false
-        default: "immortalwrt_openwrt-24.10"
+        default: "immortalwrt_master"
         type: choice
         options:
           - openwrt_main
-          - immortalwrt_openwrt-24.10
+          - immortalwrt_master
           - lede_master
       openwrt_board:
         description: "Select device board"
