--- a/.github/workflows/build-openwrt-using-imagebuilder.yml
+++ b/.github/workflows/build-openwrt-using-imagebuilder.yml
@@ -22,6 +22,7 @@ on:
           - openwrt:24.10.4
           - immortalwrt:24.10.4
           - immortalwrt:24.10.3
+          - immortalwrt:23.05.7
       openwrt_board:
         description: "Select device board"
         required: false
