--- a/.github/workflows/build-openwrt-using-imagebuilder1.yml
+++ b/.github/workflows/build-openwrt-using-imagebuilder1.yml
@@ -6,7 +6,7 @@
 #                https://downloads.immortalwrt.org/releases
 #=====================================================================================
 
-name: Build OpenWrt using ImageBuilder
+name: Build OpenWrt using ImageBuilder1
 
 on:
   repository_dispatch:
@@ -253,7 +253,7 @@ on:
 
 env:
   TZ: Etc/UTC
-  IMAGEBUILDER_SH: config/imagebuilder/imagebuilder.sh
+  IMAGEBUILDER_SH: config/imagebuilder1/imagebuilder.sh
 
 jobs:
   build:
